--- a/askat15109.md
+++ b/askat15109.md
@@ -1,11 +1,11 @@
-<h1 align="center">Hi 👋, I'm Anirudh Rai</h1>
+<h1 align="center">Hi 👋, I'm Akshat Choubey</h1>
 
 
 
 
 <p align="left"> <a href="https://twitter.com/" target="blank"><img src="https://img.shields.io/twitter/follow/?logo=twitter&style=for-the-badge" alt="" /></a> </p>
 
-🌱 I’m currently learning **WEB Development Full-Stack**
+🌱 # 👋 Hi there I'm **Akshat Choubey**, a passionate about Data Science, Web Develoment, and tech enthusiast. I thrive on exploring innovative solutions and creating impactful projects. Currently, I'm working on diverse projects, including **price prediction models**, **browser extensions**, and cutting-edge **deepfake detection technologies**.
 <img align="right" alt="Coding" width="300" src="https://i.pinimg.com/originals/81/17/8b/81178b47a8598f0c81c4799f2cdd4057.gif">
 
 
@@ -32,17 +32,16 @@
 <hr width="60%" >
 <h3 align="left">Connect with me:</h3>
 <p align="left">
-<a href="https://linkedin.com/in/anirudh-rai-072732220" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/linked-in-alt.svg" alt="anirudh-rai-072732220" height="30" width="40" /></a>
-<a href="https://stackoverflow.com/users/21304875" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/stack-overflow.svg" alt="21304875" height="30" width="40" /></a>
-<a href="https://kaggle.com/anirudhrai693" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/kaggle.svg" alt="anirudhrai693" height="30" width="40" /></a>
-<a href="https://instagram.com/anii_akhil" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg" alt="anii_akhil" height="30" width="40" /></a>
+<a href="https://linkedin.com/in/anirudh-rai-072732220](https://www.linkedin.com/in/akshat-choubey-327260252/" target="blank"><img align="center" src="https://raw.githubusercontent.com/askat15109/github-profile-readme-generator/master/src/images/icons/Social/linked-in-alt.svg" alt="anirudh-rai-072732220" height="30" width="40" /></a>
+<a href="https://stackoverflow.com/users/21304875" target="blank"><img align="center" src="https://raw.githubusercontent.com/askat15109/github-profile-readme-generator/master/src/images/icons/Social/stack-overflow.svg" alt="21304875" height="30" width="40" /></a>
+<a href="https://www.kaggle.com/akshatchoubey15109" target="blank"><img align="center" src="https://raw.githubusercontent.com/askat15109/github-profile-readme-generator/master/src/images/icons/Social/kaggle.svg" alt="akshat15109" height="30" width="40" /></a>
+<a href="https://instagram.com/akshatchoubey31" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg" alt="anii_akhil" height="30" width="40" /></a>
 </p>
 <br>
-<p align="left"> <img src="https://komarev.com/ghpvc/?username=anii693&label=Profile%20views&color=0e75b6&style=flat" alt="anii693" /> </p>
+
 
 ------
 
 
-[ANii693](https://github.com/ANii693)
+[askat15109](https://github.com/askat15109)
 
-Last Edited on: 28/02/2023
